--- a/Ictshop/bin/Ictshop.dll.config
+++ b/Ictshop/bin/Ictshop.dll.config
@@ -17,7 +17,7 @@
     <httpRuntime targetFramework="4.5.1"/>
   </system.web>
   <connectionStrings>
-    <add name="Qlbanhang" connectionString="data source=localhost\SQLEXPRESS;initial catalog=QLdienthoai;persist security info=True;user id=sa;password=Sa@12345;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
+    <add name="Qlbanhang" connectionString="data source=.\SQLEXPRESS;initial catalog=QLdienthoai;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
