--- a/Ictshop/Ictshop.csproj
+++ b/Ictshop/Ictshop.csproj
@@ -1216,6 +1216,30 @@
     <Content Include="Images\files\avt2.jpg" />
     <Content Include="Images\files\avt3.jpg" />
     <Content Include="Images\files\avt4.jpg" />
+    <Content Include="Images\files\ban1.jpg" />
+    <Content Include="Images\files\ban2.jpg" />
+    <Content Include="Images\files\banner.png" />
+    <Content Include="Images\files\bia.jpg" />
+    <Content Include="Images\files\ip3.jpg" />
+    <Content Include="Images\files\ip4.jpg" />
+    <Content Include="Images\files\ip5.jpg" />
+    <Content Include="Images\files\ip6.jpg" />
+    <Content Include="Images\files\ip7.jpg" />
+    <Content Include="Images\files\logo1.jpg" />
+    <Content Include="Images\files\mi31.jpg" />
+    <Content Include="Images\files\mi4.jpg" />
+    <Content Include="Images\files\mi5.jpg" />
+    <Content Include="Images\files\mi6.jpg" />
+    <Content Include="Images\files\mi7.jpg" />
+    <Content Include="Images\files\qc3.gif" />
+    <Content Include="Images\files\spnb1.png" />
+    <Content Include="Images\files\spnb2.png" />
+    <Content Include="Images\files\spnb3.png" />
+    <Content Include="Images\files\ss1.jpg" />
+    <Content Include="Images\files\ss2.jpg" />
+    <Content Include="Images\files\ss3.jpg" />
+    <Content Include="Images\files\ss4.jpg" />
+    <Content Include="Images\files\ss5.jpg" />
     <Content Include="Images\_thumbs\Files\mc.png" />
     <Content Include="Images\_thumbs\Files\qtchannuoi.png" />
     <Content Include="Images\_thumbs\Files\qtchebien1.png" />
